--- a/weather/.htaccess
+++ b/weather/.htaccess
@@ -7,7 +7,7 @@ RewriteCond %{REQUEST_FILENAME} !-l
 # not a direcory, not a file, not a link
 # the rewrite will not work if it's one of the above
 
-RewriteRule ^(.+)$ index.php?url=$1 [QSA.L]
+RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 
 # rewrite anything and take it to index.php
 # QSA = query string append and the symbolic link
